src/test/ui/single-use-lifetime/one-use-in-trait-method-argument.stderr
error: lifetime parameter `'g` only used once
  --> $DIR/one-use-in-trait-method-argument.rs:25:13
   |
LL |     fn next<'g>(&'g mut self) -> Option<Self::Item> { //~ ERROR `'g` only used once
   |             ^^   -- ...is used only here
   |             |
   |             this lifetime...
   |
note: lint level defined here
  --> $DIR/one-use-in-trait-method-argument.rs:14:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

